--- a/ingress.yml
+++ b/ingress.yml
@@ -10,9 +10,20 @@ metadata:
 spec:
   tls:
     - hosts:
+        - chat.mokhatbat.com
         - chat2.ctech.company
       secretName: letsencrypt-nginx
   rules:
+    - host: chat.mokhatbat.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: mokhatbat-chatwoot
+                port:
+                  number: 3000
     - host: chat2.ctech.company
       http:
         paths:
