Reduce memory limits and update chart version in values.yaml
This commit reduces the memory limits for both server and worker in the chatwoot/values.yaml, as previous settings were proving too high and resulting in inefficient usage of resources. Memory limits have been changed from 2Gi to 512Mi, and requested memory from 1Gi to 256Mi. In addition, the Chart version has been updated to 1.0.81 to reflect these changes.

--- a/charts/chatwoot/values.yaml
+++ b/charts/chatwoot/values.yaml
@@ -23,10 +23,10 @@ web:
     # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
     limits:
       cpu: 500m
-      memory: 2Gi
+      memory: 512Mi
     requests:
     cpu: 250m
-    memory: 1Gi
+    memory: 256Mi
 worker:
   hpa:
     # set this to true to enable horizontal pod autoscaling
@@ -43,10 +43,10 @@ worker:
     # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
     limits:
       cpu: 500m
-      memory: 2Gi
+      memory: 512Mi
     requests:
       cpu: 250m
-      memory: 1Gi
+      memory: 256Mi
 
 services:
   name: chatwoot
